Updated the menu and sidebar for all pages

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,6 +1,6 @@
 p {
     margin: 0;
-    color: rgb(30, 30, 30);
+    color: rgb(74, 85, 101);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -14,6 +14,7 @@ img {
 
 body {
     width: 100%;
+    margin: 0;
 }
 
 /* Header */
@@ -28,16 +29,20 @@ header {
     color: #0a0a0a;
     font-size: 0.875em;
     height: 5em;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
-    right: 0;
 }
 
 .header-left {
     width: 500px;
     display: flex;
     align-items: center;
+}
+
+.menu-icon {
+  cursor: pointer;
+  user-select: none;
 }
 
 .header-left-department-info {
@@ -122,13 +127,25 @@ header {
     position: fixed;
     top: 0;
     bottom: 0;
-    left: 0;
+    left: -250px;
     width: 226px;
     background-color: #f8f9fa;
     border-right: 1px solid #0000001a;
     padding: 0.5em;
     font-size: 12px;
     z-index: 200;
+}
+
+.sidebar-active {
+    transition: margin-left 0.3s ease;
+}
+
+.sidebar.active {
+    left: 0;
+}
+
+.sidebar-active.shift {
+    margin-left: 242px;
 }
 
 .sidebar-top {
@@ -244,7 +261,7 @@ footer {
     padding: 1em;
     text-align: center;
     border-top: 1px solid #0000001a;
-    margin: 0;
+    margin: 2em 0 0 0;
     
 }
 
@@ -258,5 +275,7 @@ footer p {
 
 /* Main */
 main {
-    margin-top: 7em;
+    margin: 1.5em auto 0 auto;
+    width: 97%;
 }
+
