--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -22,7 +22,7 @@ body {
   background: rgba(0, 0, 0, 0.3); /* dark overlay */
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   z-index: 10;
 }
 
@@ -30,6 +30,7 @@ body {
     background-color: rgb(255, 255, 255);
     position: relative;
     padding: 1.5em;
+    margin-top: 5em;
     border-radius: 12px;
     width: 90%;
     max-width: 400px;
