--- a/frontend/css/announcement.css
+++ b/frontend/css/announcement.css
@@ -6,6 +6,7 @@
 
 .main-announcement-description {
     padding-bottom: 10px;
+    font-size: small;
 }
 
 .main-announcement-head {
@@ -74,7 +75,7 @@
 }
 
 .announcement-message {
-    font-size: 1em;
+    font-size: 0.8em;
     margin-bottom: 0.5em;
     color: gray;
 }
