--- a/frontend/css/events.css
+++ b/frontend/css/events.css
@@ -83,8 +83,7 @@
 }
 
 #month-year {
-  font-size: 1.2em;
-  font-weight: bold;
+  font-size: 1.1em;
 }
 
 .calendar-days {
@@ -139,3 +138,21 @@
   text-overflow: ellipsis;
 }
 
+
+@media (max-width: 700px) {
+ .day {
+    height: 40px;
+ }
+
+ #month-year,
+ .day-name {
+    font-size: 15px;
+ }
+
+}
+
+@media (max-width: 550px) {
+ .event-month-list-toggle button {
+    padding: 0.5em 0.5em;
+ }
+}
