--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -142,6 +142,15 @@ header {
 }
 
 
+@media (max-width: 830px) {
+    .header-search-bar-div input {
+        width: 250px;
+    }
+    .header-search-bar-div input:focus {
+        width: 260px;
+    }
+}
+
 @media (max-width: 750px) {
     .desktop {
         flex: 0;
@@ -157,24 +166,33 @@ header {
     }
 
     .header-search-bar-div input {
-        width: 250px;
+        width: 230px;
+    }
+    .header-search-bar-div input:focus {
+        width: 240px;
+    }
+}
+
+@media (max-width: 650px) {
+    .header-search-bar-div input {
+        width: 200px;
+    }
+    .header-search-bar-div input:focus {
+        width: 210px;
     }
 }
 
 @media (max-width: 600px) {
     .header-search-bar-div input {
-        width: 200px;
-    }
-}
-
-@media (max-width: 555px) {
-    .header-search-bar-div input {
         width: 150px;
         text-overflow: ellipsis;
     }
+    .header-search-bar-div input:focus {
+        width: 170px;
+    }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
     .header-left-department-info img {
         width: 30px;
         height: 30px;
@@ -187,6 +205,9 @@ header {
     }
     .header-search-bar-div input {
         width: 100px;
+    }
+    .header-search-bar-div input:focus {
+        width: 130px;
     }
 }
 
